--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -10,7 +10,7 @@
   - name: Change Docker group
     shell: |
       newgrp docker
-      sudo usermod -aG docker ec2-user
+      usermod -aG docker ec2-user
 
   - name: Start Docker
     systemd:
